# shipfe-rust

./: .gitignore  .npmignore  Cargo.toml  README.md  README_CN.md  package-lock.json  package.json  shipfe-1.1.3.tgz  shipfe-1.1.6.tgz  shipfe-1.1.7.tgz  shipfe-2.0.0.tgz  shipfe-2.0.1.tgz  shipfe-2.0.2.tgz
.github/workflows/: deploy.yml  release.yml
docs/: index.md  install.md  license.md  quick-start.md  troubleshooting.md
docs/.vitepress/: config.ts
docs/commands/: deploy.md  init.md  rollback.md
docs/config/: auth.md  nginx.md  overview.md  schema.md  sub-env.md
docs/features/: atomic.md  cleanup.md  shared-assets.md  snapshot.md
docs/zh/: index.md  install.md  license.md  quick-start.md  troubleshooting.md
docs/zh/commands/: deploy.md  init.md  rollback.md
docs/zh/config/: auth.md  nginx.md  overview.md  schema.md  sub-env.md
docs/zh/features/: atomic.md  cleanup.md  shared-assets.md  snapshot.md
src/: config.rs  deploy.rs  license.rs  main.rs
