[package]
name = "shipfe"
version = "2.0.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
dirs = "5"
sha2 = "0.10"
hex = "0.4"
gethostname = "0.4"
whoami = "1.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
tar = "0.4"
flate2 = "1.0"
ssh2 = "0.9"
chrono = "0.4"
glob = "0.3"
